# linkly-ai-cli

./: Cargo.toml  README.md
.github/workflows/: pr-check.yml  release.yml
scripts/: install.ps1  install.sh  release.sh
src/: cli.rs  client.rs  connection.rs  constants.rs  main.rs  manifest.rs  output.rs  test_helpers.rs  version_check.rs
src/bridge/: handler.rs
src/commands/: auth.rs  doctor.rs  explore.rs  find_paths.rs  grep.rs  list_libraries.rs  mcp.rs  mod.rs  outline.rs  read.rs  search.rs  self_update.rs  status.rs
