[package]
name = "linkly-ai-cli"
version = "0.1.4"
edition = "2021"
description = "CLI for Linkly AI - search your local documents from the terminal"
license = "Apache-2.0"
repository = "https://github.com/LinklyAI/linkly-ai-cli"

[[bin]]
name = "linkly"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
dirs = "6.0.0"
flate2 = "1.1.9"
owo-colors = "4.3.0"
reqwest = { version = "0.13.2", features = ["json"] }
rmcp = { version = "0.17.0", features = ["client", "server", "macros", "transport-async-rw", "transport-streamable-http-client-reqwest"] }
schemars = "1"
self-replace = "1.5.0"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full"] }
zip = "8.1.0"
